--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,8 +1,28 @@
-#Fichier de configurations de MultiCommands
+#Configuration file of MultiCommands
 
-
-#Les messages seront envoyés dans l'une de ses options :
-# - ACTIONBAR
-# - CHAT
-# - TITLE
+#Les messages peuvent êtres envoyés de plusieurs façons :
+# - ACTIONBAR | actionbar
+# - CHAT | chat
+# - TITLE | title
+# - BOSSBAR | bossbar
 send-message-on: CHAT
+
+#Activer et gérer les effets sonores:
+#Liste des effets sonores de Minecraft
+#https://www.digminecraft.com/lists/sound_list_pc.php
+
+enable-command-sounds: true
+
+#Pas de permissions / Erreurs en tous genres :
+no-perm-sound: "BLOCK_ANVIL_PLACE"
+
+#Commande effectuée:
+cmd-done-sound: "ENTITY_EXPERIENCE_ORB_PICKUP"
+
+#Sons custom:
+feed-heal-sounds: true
+
+#Activer / désactiver le GUI d'aide
+enable-help-gui: true
+
+spawn:
