--- a/src/main/resources/lang.properties
+++ b/src/main/resources/lang.properties
@@ -1,1 +1,3 @@
-name = MultiCommands
+admin_chat = "&7&l{ &4AdminChat &8(<)&7&l} &c%p : &f%msg%"
+staff_chat = "&7&l{ &6StaffChat &8(!)&7&l} &6%p : &f%msg%"
+dev_chat = "&7&l{ &5DevChat &7&l} &8(%)&5%p : &f%msg%"
