--- a/src/main/resources/lang.properties
+++ b/src/main/resources/lang.properties
@@ -1,3 +1,9 @@
-admin_chat = "&7&l{ &4AdminChat &8(<)&7&l} &c%p : &f%msg%"
-staff_chat = "&7&l{ &6StaffChat &8(!)&7&l} &6%p : &f%msg%"
-dev_chat = "&7&l{ &5DevChat &7&l} &8(%)&5%p : &f%msg%"
+admin_chat = &7&l{ &4AdminChat &8(<)&7&l} &c%p : &f%msg%
+staff_chat = &7&l{ &6StaffChat &8(!)&7&l} &6%p : &f%msg%
+dev_chat = &7&l{ &5DevChat &7&l} &8(%)&5%p : &f%msg%
+build_chat = &7&l{ &2BuilderChat &8(#)&7&l} &2%p : &f%msg%
+modo_chat = &7&l{ &9ModoChat &8(>)&7&l} &9%p : &f%msg%
+no_console_cmd = &cLa commande &e/%cmd% &cest réservée aux joueurs!
+no_console_cmd_without_args = &cLa commande &e/%cmd% &csans &e<joueur> &cest réservée aux joueurs!
+not_a_player = &cLe joueur &e%p &cn'est pas connecté / pas un joueur!
+no_perm = &cVous n'avez pas la permission d'utiliser cette commande!
