--- a/build.gradle
+++ b/build.gradle
@@ -18,14 +18,14 @@ repositories {
 }
 
 dependencies {
-    shadow 'io.papermc.paper:paper-api:1.17-R0.1-SNAPSHOT'
-    shadow 'me.clip:placeholderapi:2.11.2'
+    shadow 'io.papermc.paper:paper-api:1.18-R0.1-SNAPSHOT'
+    compileOnly 'me.clip:placeholderapi:2.11.2'
     shadow fileTree(dir: 'libs', include: '*.jar')
 
     implementation 'net.kyori:adventure-platform-bukkit:4.1.2'
 }
 
-def targetJavaVersion = 16
+def targetJavaVersion = 17
 java {
     def javaVersion = JavaVersion.toVersion(targetJavaVersion)
     sourceCompatibility = javaVersion
