Build v 0.87.3 Correction de divers bugs, ajout configurations de messages

--- a/src/main/resources/lang.properties
+++ b/src/main/resources/lang.properties
@@ -1,13 +1,13 @@
 admin_chat = "&7&l{ &4AdminChat &8(&6%prefix%&8)&7&l} &c%player% : &f%msg%"
 admin_chat_prefix = <
 staff_chat = "&7&l{ &6StaffChat &8(&6%prefix%&8)&7&l} &6%player% : &f%msg%"
-staff_chat_prefix =
-dev_chat = "&7&l{ &5DevChat &7&l} &8(&6%prefix%&8)&5%player% : &f%msg%"
-dev_chat_prefix =
+staff_chat_prefix = !
+dev_chat = "&7&l{ &5DevChat &8(&6%prefix%&8)&7&l} &5%player% : &f%msg%"
+dev_chat_prefix = %
 build_chat = "&7&l{ &2BuilderChat &8(&6%prefix%&8)&7&l} &2%player% : &f%msg%"
-build_chat_prefix =
+build_chat_prefix = #
 modo_chat = "&7&l{ &9ModoChat &8(&6%prefix%&8)&7&l} &9%player% : &f%msg%"
-modo_chat_prefix =
+modo_chat_prefix = >
 no_console_cmd = "&cLa commande &e/%cmd% &cest réservée aux joueurs!"
 no_console_cmd_without_args = "&cLa commande &e/%cmd% &csans &e<joueur> &cest réservée aux joueurs!"
 not_a_player = "&cLe joueur &e%p &cn'est pas connecté / pas un joueur!"
