Build v 0.91.4 Adding private messages Adding complete chat managing

--- a/src/main/resources/lang.properties
+++ b/src/main/resources/lang.properties
@@ -3,7 +3,7 @@ admin_chat_prefix = <
 staff_chat = "&7&l{ &6StaffChat &8(&6%prefix%&8)&7&l} &6%player% : &f%msg%"
 staff_chat_prefix = !
 dev_chat = "&7&l{ &5DevChat &8(&6%prefix%&8)&7&l} &5%player% : &f%msg%"
-dev_chat_prefix = %
+dev_chat_prefix = $
 build_chat = "&7&l{ &2BuilderChat &8(&6%prefix%&8)&7&l} &2%player% : &f%msg%"
 build_chat_prefix = #
 modo_chat = "&7&l{ &9ModoChat &8(&6%prefix%&8)&7&l} &9%player% : &f%msg%"
