--- a/src/main/resources/lang.properties
+++ b/src/main/resources/lang.properties
@@ -31,8 +31,13 @@ clear_admin = "&7L'inventaire de &3%player% &7à été vidé!"
 death_message = "&7Vous êtes mort en &e%loc%&7!"
 economy_balance = "&aVous avez &e%balance%$ &aen poche!"
 economy_balance_other = "&aLa poche de &e%player% &acontient &e%balance%$&a!"
-economy_add = "&7Vous avez &aajouté &e%balance%$ &7dans la poche de &e%player%&7!"
-economy_remove = "&7Vous avez &cretiré &e%balance%$ &7de la poche de &e%player%&7!"
+economy_bank_balance = "&aLa banque &e%bankName% &acontient &e%balance%$&a!"
+economy_bank_created = "&aLa banque &e%bankName% &aà bien été créée!"
+economy_bank_deposit = "&7Vous avez &aajouté &e%balance%$ &7dans la banque &d%bankName%&7!"
+economy_bank_reset = "&7Vous avez &creset &7la banque &d%bankName%&7!"
+economy_bank_withdraw = "&7Vous avez &cretiré &e%balance%$ &7de la banque &d%bankName%&7!"
+economy_deposit = "&7Vous avez &aajouté &e%balance%$ &7dans la poche de &e%player%&7!"
+economy_withdraw = "&7Vous avez &cretiré &e%balance%$ &7de la poche de &e%player%&7!"
 economy_reset = "&7Vous avez &créinitialisé &7la poche de &e%player%&7!"
 economy_set = "&7Vous avez &amis &e%balance% &7dans la poche de &e%player%&7!"
 enderchest_opened_by_admin = "&5&lHall&d&lOf&5&lGames &8> &eUn &cadministrateur &eà ouvert votre ender-chest!"
