--- a/src/main/resources/lang.properties
+++ b/src/main/resources/lang.properties
@@ -10,7 +10,7 @@ modo_chat = "&7&l{ &9ModoChat &8(&6%prefix%&8)&7&l} &9%player% : &f%msg%"
 modo_chat_prefix = >
 no_console_cmd = "&cLa commande &e/%cmd% &cest réservée aux joueurs!"
 no_console_cmd_without_args = "&cLa commande &e/%cmd% &csans &e<joueur> &cest réservée aux joueurs!"
-not_a_player = "&cLe joueur &e%p &cn'est pas connecté / pas un joueur!"
+not_a_player = "&cLe joueur &e%player% &cn'est pas connecté / pas un joueur!"
 no_perm = "&cVous n'avez pas la permission d'utiliser cette commande!"
 no_perm_to_other = "&cVous n'avez pas la permission d'utiliser cette commande sur un autre joueur!"
 no_args = "&cLa commande &e/%cmd% &cs'utilise avec des arguments!\n&e- /%cmd% %args%"
@@ -31,6 +31,8 @@ clear_admin = "&7L'inventaire de &3%player% &7à été vidé!"
 death_message = "&7Vous êtes mort en &e%loc%&7!"
 economy_balance = "&aVous avez &e%balance%$ &aen poche!"
 economy_balance_other = "&aLa poche de &e%player% &acontient &e%balance%$&a!"
+economy_pay_sender = "&aVous avez envoyé &d%value%$ &aà &b%player%&a!"
+economy_pay_receiver = "&aVous avez reçu &d%value%$ &ade la part de &b%player%&a!\n &aVous avez maintenant &e%balance%$"
 economy_bank_balance = "&aLa banque &e%bankName% &acontient &e%balance%$&a!"
 economy_bank_created = "&aLa banque &e%bankName% &aà bien été créée!"
 economy_bank_deposit = "&7Vous avez &aajouté &e%balance%$ &7dans la banque &d%bankName%&7!"
