Build v 0.93.5 Working on economy system Working with VaultAPI

--- a/src/main/resources/lang.properties
+++ b/src/main/resources/lang.properties
@@ -41,7 +41,7 @@ economy_bank_withdraw = "&7Vous avez &cretiré &e%balance%$ &7de la banque &d%ban
 economy_deposit = "&7Vous avez &aajouté &e%balance%$ &7dans la poche de &e%player%&7!"
 economy_withdraw = "&7Vous avez &cretiré &e%balance%$ &7de la poche de &e%player%&7!"
 economy_reset = "&7Vous avez &créinitialisé &7la poche de &e%player%&7!"
-economy_set = "&7Vous avez &amis &e%balance% &7dans la poche de &e%player%&7!"
+economy_set = "&7Vous avez &amis &e%balance%$ &7dans la poche de &e%player%&7!"
 enderchest_opened_by_admin = "&5&lHall&d&lOf&5&lGames &8> &eUn &cadministrateur &eà ouvert votre ender-chest!"
 feed_self_done = "&7Vous avez été &arassasié&7!"
 feed_self_already = "&7Vous êtes déjà rassasié!"
