--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
-def version = '0.93.3 (no-economy)'
+def version = '0.93.5'
 
 shadowJar {
     archiveName = "MultiCommands.jar"
@@ -11,11 +11,10 @@ shadowJar {
 
 repositories {
     mavenCentral()
-    maven { url = 'https://jitpack.io/' } // Maven
+    maven { url = 'https://jitpack.io/' } // Maven | Vault
     maven { url = 'https://oss.sonatype.org/content/groups/public/' } // Maven
     maven { url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/' } // PlaceHolderAPI
     maven { url = 'https://repo.papermc.io/repository/maven-public/' } // PaperMC
-    maven { url = 'https://jitpack.io' } // Vault
 }
 
 dependencies {
@@ -24,7 +23,7 @@ dependencies {
     shadow fileTree(dir: 'libs', include: '*.jar') // Fichier de build
     implementation 'com.google.code.gson:gson:2.10' // Json
     implementation 'net.kyori:adventure-platform-bukkit:4.2.0' // Adventure
-    compileOnly "com.github.MilkBowl:VaultAPI:1.7" // Vault
+    compileOnly "com.github.MilkBowl:VaultAPI:1.7.1" // Vault
 }
 
 def targetJavaVersion = 17
