--- a/src/main/resources/lang.properties
+++ b/src/main/resources/lang.properties
@@ -1,108 +1,108 @@
-admin_chat = "&7&l{ &4AdminChat &8(&6%prefix%&8)&7&l} &c%player% : &f%msg%"
+admin_chat = &7&l{ &4AdminChat &8(&6%prefix%&8)&7&l} &c%player% : &f%msg%
 admin_chat_prefix = <
-staff_chat = "&7&l{ &6StaffChat &8(&6%prefix%&8)&7&l} &6%player% : &f%msg%"
+staff_chat = &7&l{ &6StaffChat &8(&6%prefix%&8)&7&l} &6%player% : &f%msg%
 staff_chat_prefix = !
-dev_chat = "&7&l{ &5DevChat &8(&6%prefix%&8)&7&l} &5%player% : &f%msg%"
+dev_chat = &7&l{ &5DevChat &8(&6%prefix%&8)&7&l} &5%player% : &f%msg%
 dev_chat_prefix = $
-build_chat = "&7&l{ &2BuilderChat &8(&6%prefix%&8)&7&l} &2%player% : &f%msg%"
+build_chat = &7&l{ &2BuilderChat &8(&6%prefix%&8)&7&l} &2%player% : &f%msg%
 build_chat_prefix = #
-modo_chat = "&7&l{ &9ModoChat &8(&6%prefix%&8)&7&l} &9%player% : &f%msg%"
+modo_chat = &7&l{ &9ModoChat &8(&6%prefix%&8)&7&l} &9%player% : &f%msg%
 modo_chat_prefix = >
-no_console_cmd = "&cLa commande &e/%cmd% &cest réservée aux joueurs!"
-no_console_cmd_without_args = "&cLa commande &e/%cmd% &csans &e<joueur> &cest réservée aux joueurs!"
-not_a_player = "&cLe joueur &e%player% &cn'est pas connecté / pas un joueur!"
-no_perm = "&cVous n'avez pas la permission d'utiliser cette commande!"
-no_perm_to_other = "&cVous n'avez pas la permission d'utiliser cette commande sur un autre joueur!"
-no_args = "&cLa commande &e/%cmd% &cs'utilise avec des arguments!\n&e- /%cmd% %args%"
-actionbosstitle_sent_to_all = "&aVotre message à été envoyé à tout le monde!"
-actionbosstitle_sent_to_other = "&aVotre message à bien été envoyé à &e%player%&a!"
-afk_enabled_broadcast = "&3%player% &7est AFK"
-afk_disabled_broadcast = "&3%player% &7n'est plus AFK"
-afk_enabled_self = "&7Vous êtes maintenant AFK"
-afk_disabled_self = "&7Vous n'êtes plus AFK"
-alert_prefix = "&c&l-&4&l{ &f&lAlerte &4&l}&c&l-"
-alert_sent = "&7Votre message à été envoyé."
-ban_prefix = "&5&lHall&d&lOf&5&lGames &cVous avez été bannis pour: \n%reason%"
-broadcast_prefix = "&3&l-&9&l{ &5&lH&d&lO&5&lG &9&l}&3&l-"
-broadcast_sent = "&7Votre message à été envoyé."
-clear_self = "&7Votre inventaire à été vidé!"
-clear_by_admin = "&5&lHall&d&lOf&5&lGames &8> &eUn &cadministrateur &eà vidé votre inventaire!"
-clear_admin = "&7L'inventaire de &3%player% &7à été vidé!"
-death_message = "&7Vous êtes mort en &e%loc%&7!"
-economy_balance = "&aVous avez &e%balance%$ &aen poche!"
-economy_balance_other = "&aLa poche de &e%player% &acontient &e%balance%$&a!"
-economy_pay_sender = "&aVous avez envoyé &d%value%$ &aà &b%player%&a!"
-economy_pay_receiver = "&aVous avez reçu &d%value%$ &ade la part de &b%player%&a!\n &aVous avez maintenant &e%balance%$"
-economy_bank_balance = "&aLa banque &e%bankName% &acontient &e%balance%$&a!"
-economy_bank_created = "&aLa banque &e%bankName% &aà bien été créée!"
-economy_bank_deposit = "&7Vous avez &aajouté &e%balance%$ &7dans la banque &d%bankName%&7!"
-economy_bank_reset = "&7Vous avez &creset &7la banque &d%bankName%&7!"
-economy_bank_withdraw = "&7Vous avez &cretiré &e%balance%$ &7de la banque &d%bankName%&7!"
-economy_deposit = "&7Vous avez &aajouté &e%balance%$ &7dans la poche de &e%player%&7!"
-economy_withdraw = "&7Vous avez &cretiré &e%balance%$ &7de la poche de &e%player%&7!"
-economy_reset = "&7Vous avez &créinitialisé &7la poche de &e%player%&7!"
-economy_set = "&7Vous avez &amis &e%balance%$ &7dans la poche de &e%player%&7!"
-enderchest_opened_by_admin = "&5&lHall&d&lOf&5&lGames &8> &eUn &cadministrateur &eà ouvert votre ender-chest!"
-feed_self_done = "&7Vous avez été &arassasié&7!"
-feed_self_already = "&7Vous êtes déjà rassasié!"
-feed_admin = "&7Vous avez &arassasié &3%p&7!"
-feed_admin_already = "&3%player% &eà déjà été rassasié!"
-feed_by_admin = "&5&lHall&d&lOf&5&lGames &8> &eUn &cadministrateur &evous à &anourris&e!"
-fly_enabled_self = "&7Votre &6Fly-mode &7à été &aactivé&7!"
-fly_disabled_self = "&7Votre &6Fly-mode &7à été &cdésactivé&7!"
-fly_enabled_admin = "&7Le &6Fly-mode &7de &3%player% &7à été &aactivé&7!"
-fly_disabled_admin = "&7Le &6Fly-mode &7de &3%player% &7à été &cdésactivé&7!"
-fly_enabled_by_admin = "&5&lHall&d&lOf&5&lGames &8> &eUn &cadministrateur &eà &aactivé &evotre &6Fly_mode&e!"
-fly_disabled_by_admin = "&5&lHall&d&lOf&5&lGames &8> &eUn &cadministrateur &eà &cdésactivé &evotre &6Fly_mode&e!"
-freeze_enabled_by_admin = "&5&lHall&d&lOf&5&lGames &8> &eVous avez été &cgelé &epar un &cadministrateur&e!"
-freeze_disabled_by_admin = "&5&lHall&d&lOf&5&lGames &8> &eVous avez été &alibéré &epar un &cadministrateur&e!"
-freeze_enabled_admin = "&7Vous venez d'ajouter &3%player% &7aux joueurs &bfreeze&7!"
-freeze_disabled_admin = "&7Vous venez de retirer &3%player% &7des joueurs &bfreeze&7!"
-freeze_break_block = "&cVous ne pouvez pas casser de blocs en étant &egelé&c!"
-freeze_chat = "&cVous ne pouvez pas parler en étant &egelé&c!"
-freeze_drop_item = "&cVous ne pouvez pas jeter d'items en étant &egelé&c!"
-freeze_move = "&cVous ne pouvez pas vous déplacer en étant &egelé&c!"
-freeze_pickup_item = "&cVous ne pouvez pas récupérer d'items en étant &egelé&c!"
-freeze_place = "&cVous ne pouvez pas placer de blocs en étant &egelé&c!"
-gamemode_self = "&7Votre &6Gamemode &7à été changé en mode &d%gamemode%&7!"
-gamemode_admin = "&7Le &6Gamemode &7de &3%player% &7à été changé en mode &d%gamemode%&7!"
-gamemode_by_admin = "&5&lHall&d&lOf&5&lGames &8> &eVotre &6Gamemode &eà été changé en mode &d%gamemode%&epar un &cadministrateur&e!"
-god_enabled_self = "&7Vous avez &aactivé &7le &6God-mode&7!"
-god_disabled_self = "&7Vous avez &cdésactivé &7le &6God-mode&7!"
-god_enabled_admin = "&7Le &6God-mode &7de &3%player%&7 à été &aactivé&7!"
-god_disabled_admin = "&7Le &6God-mode &7de &3%player%&7 à été &cdésactivé&7!"
-god_enabled_by_admin = "&5&lHall&d&lOf&5&lGames &8> &eUn &cadministrateur &evient de vous &aactiver &evotre &6God-mode&e!"
-god_disabled_by_admin = "&5&lHall&d&lOf&5&lGames &8> &eUn &cadministrateur &evient de vous &cdésactiver &evotre &6God-mode&e!"
-helpop_sent = "&eVotre message à été envoyé aux &c&lAdministrateurs&e!"
-helpop_no_admins = "&cDésolé mais aucuns administrateurs n'est actuellement connecté! Merci de réessayer plus tard."
-heal_self = "&7Vous avez été &asoigné&7!"
-heal_self_already = "&7Vous êtes déjà en bonne santé!"
-heal_admin = "&7Vous avez &asoigné &3%player%&7!"
-heal_admin_already = "&3%p &7est déjà en bonne santé!"
-heal_by_admin = "&5&lHall&d&lOf&5&lGames &8> &eUn &cadministrateur&e vous à &asoigné&e!"
-invsee_admin = "&7Vous avez affiché l'inventaire de &3%player%&7!"
-join_message = "&8{ &a+ &8} &e-&a> &3%player%"
-kick_prefix = "&5&lHall&d&lOf&5&lGames &cVous avez été expulsé par un administrateur!"
-leave_message = "&8{ &c- &8} &c<&e- &3%player%"
-nickname_done = "&7Votre pseudo à été changé en &a%newName&7!"
-ping_self = "&7Votre latence est de %ping%&7!"
-ping_other = "&7La latence de &3%player% &7est de %ping%&7!"
-reload = "&aLes fichiers de &6MultiCommands &aont été rechargés!"
-setspawn_done = "&aLe spawn principal à été placé à votre emplacement!"
-spawn_error = "&cLe spawn n'à pas été définis / est introuvable, merci de le signaler à un membre du Staff!"
-spawn_teleport = "&aVous avez été téléporté au spawn!"
-teleport_error = "&cMerci de taper &e/<tp|teleport> (<x><y><z>|<joueur>)&c!"
-teleport_error_coordinates = "&cMerci de taper &e/tp <X> <Y> <Z>&c!"
-teleport_error_player_coordinates = "&cMerci de taper &e/tp <joueur> <X> <Y> <Z>&c!"
-teleport_self_to_player = "&7Vous avez été téléporté à &3%player%&7!"
-teleport_player_to_player = "&eVous avez téléporté &d%player1% &evers &3%player2%&e!"
-teleport_self_to_coordinates = "&aVous avez été téléporté en &e%loc%&a!"
-teleport_player_to_coordinates = "&eVous avez téléporté &3%player% &een &6%loc%&e!"
-teleport_player_to_player_by_admin = "&5&lMulti&d&lCommands &8> &eVous avez été téléporté vers &3%player%&e par un &cadministrateur&e!"
-teleport_player_to_coordinates_by_admin = "&5&lMulti&d&lCommands &8> &eVous avez été téléporté en &6%loc%&e par un &cadministrateur&e!"
-vanish_enabled_self = "&7Vous avez &aactivé &7le &6vanish&7!"
-vanish_disabled_self = "&7Vous avez &cdésactivé &7le &6vanish&7!"
-vanish_enabled_admin = "&7Vous avez &aactivé &7le &6vanish&7 de &b%player%&7!"
-vanish_disabled_admin = "&7Vous avez &cdésactivé &7le &6vanish&7 de &b%player%&7!"
-vanish_enabled_by_admin = "&5&lHall&d&lOf&5&lGames &8> &eUn &cadministrateur &evient de vous &aactivé &evotre &6vanish&e!"
-vanish_disabled_by_admin = "&5&lHall&d&lOf&5&lGames &8> &eUn &cadministrateur &evient de vous &cdésactivé &evotre &6vanish&e!"
+no_console_cmd = &cLa commande &e/%cmd% &cest rÃ©servÃ©e aux joueurs!
+no_console_cmd_without_args = &cLa commande &e/%cmd% &csans &e<joueur> &cest rÃ©servÃ©e aux joueurs!
+not_a_player = &cLe joueur &e%player% &cn'est pas connectÃ© / pas un joueur!
+no_perm = &cVous n'avez pas la permission d'utiliser cette commande!
+no_perm_to_other = &cVous n'avez pas la permission d'utiliser cette commande sur un autre joueur!
+no_args = &cLa commande &e/%cmd% &cs'utilise avec des arguments!\n&e- /%cmd% %args%
+actionbosstitle_sent_to_all = &aVotre message Ã© Ã©tÃ© envoyÃ© Ã© tout le monde!
+actionbosstitle_sent_to_other = &aVotre message Ã© bien Ã©tÃ© envoyÃ© Ã© &e%player%&a!
+afk_enabled_broadcast = &3%player% &7est AFK
+afk_disabled_broadcast = &3%player% &7n'est plus AFK
+afk_enabled_self = &7Vous Ã©tes maintenant AFK
+afk_disabled_self = &7Vous n'Ã©tes plus AFK
+alert_prefix = &c&l-&4&l{ &f&lAlerte &4&l}&c&l-
+alert_sent = &7Votre message Ã  Ã©tÃ© envoyÃ©.
+ban_prefix = &5&lHall&d&lOf&5&lGames &cVous avez Ã©tÃ© bannis pour: \n%reason%
+broadcast_prefix = &3&l-&9&l{ &5&lH&d&lO&5&lG &9&l}&3&l-
+broadcast_sent = &7Votre message Ã  Ã©tÃ© envoyÃ©.
+clear_self = &7Votre inventaire Ã  Ã©tÃ© vidÃ©!
+clear_by_admin = &5&lHall&d&lOf&5&lGames &8> &eUn &cadministrateur &eÃ  vidÃ© votre inventaire!
+clear_admin = &7L'inventaire de &3%player% &7Ã  Ã©tÃ© vidÃ©!
+death_message = &7Vous Ãªtes mort en &e%loc%&7!
+economy_balance = &aVous avez &e%balance%$ &aen poche!
+economy_balance_other = &aLa poche de &e%player% &acontient &e%balance%$&a!
+economy_pay_sender = &aVous avez envoyÃ© &d%value%$ &aÃ  &b%player%&a!
+economy_pay_receiver = &aVous avez reÃ§u &d%value%$ &ade la part de &b%player%&a!\n &aVous avez maintenant &e%balance%$
+economy_bank_balance = &aLa banque &e%bankName% &acontient &e%balance%$&a!
+economy_bank_created = &aLa banque &e%bankName% &aÃ© bien Ã©tÃ© crÃ©Ã©e!
+economy_bank_deposit = &7Vous avez &aajoutÃ© &e%balance%$ &7dans la banque &d%bankName%&7!
+economy_bank_reset = &7Vous avez &creset &7la banque &d%bankName%&7!
+economy_bank_withdraw = &7Vous avez &cretirÃ© &e%balance%$ &7de la banque &d%bankName%&7!
+economy_deposit = &7Vous avez &aajoutÃ© &e%balance%$ &7dans la poche de &e%player%&7!
+economy_withdraw = &7Vous avez &cretirÃ© &e%balance%$ &7de la poche de &e%player%&7!
+economy_reset = &7Vous avez &crÃ©initialisÃ© &7la poche de &e%player%&7!
+economy_set = &7Vous avez &amis &e%balance%$ &7dans la poche de &e%player%&7!
+enderchest_opened_by_admin = &5&lHall&d&lOf&5&lGames &8> &eUn &cadministrateur &eÃ  ouvert votre ender-chest!
+feed_self_done = &7Vous avez Ã©tÃ© &arassasiÃ©&7!
+feed_self_already = &7Vous Ãªtes dÃ©jÃ  rassasiÃ©!
+feed_admin = &7Vous avez &arassasiÃ© &3%p&7!
+feed_admin_already = &3%player% &ea dÃ©jÃ  Ã©tÃ© rassasiÃ©!
+feed_by_admin = &5&lHall&d&lOf&5&lGames &8> &eUn &cadministrateur &evous Ã© &anourris&e!
+fly_enabled_self = &7Votre &6Fly-mode &7Ã  Ã©tÃ© &aactivÃ©&7!
+fly_disabled_self = &7Votre &6Fly-mode &7Ã  Ã©tÃ© &cdÃ©sactivÃ©&7!
+fly_enabled_admin = &7Le &6Fly-mode &7de &3%player% &7Ã  Ã©tÃ© &aactivÃ©&7!
+fly_disabled_admin = &7Le &6Fly-mode &7de &3%player% &7Ã  Ã©tÃ© &cdÃ©sactivÃ©&7!
+fly_enabled_by_admin = &5&lHall&d&lOf&5&lGames &8> &eUn &cadministrateur &eÃ  &aactivÃ© &evotre &6Fly_mode&e!
+fly_disabled_by_admin = &5&lHall&d&lOf&5&lGames &8> &eUn &cadministrateur &eÃ  &cdÃ©sactivÃ© &evotre &6Fly_mode&e!
+freeze_enabled_by_admin = &5&lHall&d&lOf&5&lGames &8> &eVous avez Ã©tÃ© &cgelÃ© &epar un &cadministrateur&e!
+freeze_disabled_by_admin = &5&lHall&d&lOf&5&lGames &8> &eVous avez Ã©tÃ© &alibÃ©rÃ© &epar un &cadministrateur&e!
+freeze_enabled_admin = &7Vous venez d'ajouter &3%player% &7aux joueurs &bfreeze&7!
+freeze_disabled_admin = &7Vous venez de retirer &3%player% &7des joueurs &bfreeze&7!
+freeze_break_block = &cVous ne pouvez pas casser de blocs en Ã©tant &egelÃ©&c!
+freeze_chat = &cVous ne pouvez pas parler en Ã©tant &egelÃ©&c!
+freeze_drop_item = &cVous ne pouvez pas jeter d'items en Ã©tant &egelÃ©&c!
+freeze_move = &cVous ne pouvez pas vous dÃ©placer en Ã©tant &egelÃ©&c!
+freeze_pickup_item = &cVous ne pouvez pas rÃ©cupÃ©rer d'items en Ã©tant &egelÃ©&c!
+freeze_place = &cVous ne pouvez pas placer de blocs en Ã©tant &egelÃ©&c!
+gamemode_self = &7Votre &6Gamemode &7Ã  Ã©tÃ© changÃ© en mode &d%gamemode%&7!
+gamemode_admin = &7Le &6Gamemode &7de &3%player% &7Ã  Ã©tÃ© changÃ© en mode &d%gamemode%&7!
+gamemode_by_admin = &5&lHall&d&lOf&5&lGames &8> &eVotre &6Gamemode &eÃ  Ã©tÃ© changÃ© en mode &d%gamemode%&epar un &cadministrateur&e!
+god_enabled_self = &7Vous avez &aactivÃ© &7le &6God-mode&7!
+god_disabled_self = &7Vous avez &cdÃ©sactivÃ© &7le &6God-mode&7!
+god_enabled_admin = &7Le &6God-mode &7de &3%player% &7Ã  Ã©tÃ© &aactivÃ©&7!
+god_disabled_admin = &7Le &6God-mode &7de &3%player% &7Ã  Ã©tÃ© &cdÃ©sactivÃ©&7!
+god_enabled_by_admin = &5&lHall&d&lOf&5&lGames &8> &eUn &cadministrateur &evient de vous &aactiver &evotre &6God-mode&e!
+god_disabled_by_admin = &5&lHall&d&lOf&5&lGames &8> &eUn &cadministrateur &evient de vous &cdÃ©sactiver &evotre &6God-mode&e!
+helpop_sent = &eVotre message Ã  Ã©tÃ© envoyÃ© aux &c&lAdministrateurs&e!
+helpop_no_admins = &cDÃ©solÃ© mais aucuns administrateurs n'est actuellement connectÃ©! Merci de rÃ©essayer plus tard.
+heal_self = &7Vous avez Ã©tÃ© &asoignÃ©&7!
+heal_self_already = &7Vous Ã©tes dÃ©jÃ  en bonne santÃ©!
+heal_admin = &7Vous avez &asoignÃ© &3%player%&7!
+heal_admin_already = &3%p &7est dÃ©jÃ  en bonne santÃ©!
+heal_by_admin = &5&lHall&d&lOf&5&lGames &8> &eUn &cadministrateur&e vous Ã© &asoignÃ©&e!
+invsee_admin = &7Vous avez affichÃ© l'inventaire de &3%player%&7!
+join_message = &8{ &a+ &8} &e-&a> &3%player%
+kick_prefix = &5&lHall&d&lOf&5&lGames &cVous avez Ã©tÃ© expulsÃ© par un administrateur!
+leave_message = &8{ &c- &8} &c<&e- &3%player%
+nickname_done = &7Votre pseudo Ã  Ã©tÃ© changÃ© en &a%newName&7!
+ping_self = &7Votre latence est de %ping%&7!
+ping_other = &7La latence de &3%player% &7est de %ping%&7!
+reload = &aLes fichiers de &6MultiCommands &aont Ã©tÃ© rechargÃ©s!
+setspawn_done = &aLe spawn principal Ã  Ã©tÃ© placÃ© Ã  votre emplacement!
+spawn_error = &cLe spawn n'Ã  pas Ã©tÃ© dÃ©finis / est introuvable, merci de le signaler Ã  un membre du Staff!
+spawn_teleport = &aVous avez Ã©tÃ© tÃ©lÃ©portÃ© au spawn!
+teleport_error = &cMerci de taper &e/<tp|teleport> (<x><y><z>|<joueur>)&c!
+teleport_error_coordinates = &cMerci de taper &e/tp <X> <Y> <Z>&c!
+teleport_error_player_coordinates = &cMerci de taper &e/tp <joueur> <X> <Y> <Z>&c!
+teleport_self_to_player = &7Vous avez Ã©tÃ© tÃ©lÃ©portÃ© Ã© &3%player%&7!
+teleport_player_to_player = &eVous avez tÃ©lÃ©portÃ© &d%player1% &evers &3%player2%&e!
+teleport_self_to_coordinates = &aVous avez Ã©tÃ© tÃ©lÃ©portÃ© en &e%loc%&a!
+teleport_player_to_coordinates = &eVous avez tÃ©lÃ©portÃ© &3%player% &een &6%loc%&e!
+teleport_player_to_player_by_admin = &5&lMulti&d&lCommands &8> &eVous avez Ã©tÃ© tÃ©lÃ©portÃ© vers &3%player%&e par un &cadministrateur&e!
+teleport_player_to_coordinates_by_admin = &5&lMulti&d&lCommands &8> &eVous avez Ã©tÃ© tÃ©lÃ©portÃ© en &6%loc%&e par un &cadministrateur&e!
+vanish_enabled_self = &7Vous avez &aactivÃ© &7le &6vanish&7!
+vanish_disabled_self = &7Vous avez &cdÃ©sactivÃ© &7le &6vanish&7!
+vanish_enabled_admin = &7Vous avez &aactivÃ© &7le &6vanish&7 de &b%player%&7!
+vanish_disabled_admin = &7Vous avez &cdÃ©sactivÃ© &7le &6vanish&7 de &b%player%&7!
+vanish_enabled_by_admin = &5&lHall&d&lOf&5&lGames &8> &eUn &cadministrateur &evient de vous &aactivÃ© &evotre &6vanish&e!
+vanish_disabled_by_admin = &5&lHall&d&lOf&5&lGames &8> &eUn &cadministrateur &evient de vous &cdÃ©sactivÃ© &evotre &6vanish&e!
