--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
-def version = '0.94'
+def version = '0.95.6'
 
 shadowJar {
     archiveName = "MultiCommands.jar"
@@ -51,5 +51,11 @@ processResources {
         expand props
     }
 }
+test{
+    systemProperty("file.encoding", "utf-8")
+}
 
 compileJava.options.encoding = 'UTF-8'
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
