--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
-def version = '0.95.6'
+def version = '0.96'
 
 shadowJar {
     archiveName = "MultiCommands.jar"
@@ -23,6 +23,8 @@ dependencies {
     shadow fileTree(dir: 'libs', include: '*.jar') // Fichier de build
     implementation 'com.google.code.gson:gson:2.10.1' // Json
     implementation 'net.kyori:adventure-platform-bukkit:4.3.0' // Adventure
+    implementation 'net.kyori:adventure-api:4.13.1' // Adventure
+    implementation "net.kyori:adventure-text-minimessage:4.13.1" // Adventure
     compileOnly "com.github.MilkBowl:VaultAPI:1.7.1" // Vault
 }
 
