--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -60,6 +60,8 @@ commands:
   chat:
     description: Permet de gérer le chat
     permission: multicommands.chat
+  compass:
+    description: Permet de connaitre votre orientation et vos coordonées
   clear:
     description: Vider son inventaire / celui d'un autre joueur
     aliases:
