--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -178,6 +178,8 @@ commands:
   title:
     description: Permet d'envoyer un message en titre
     permission: multicommands.title
+  top:
+    description: Permet de se téléporter sur le bloc le plus haut
   vanish:
     description: Permet de gérer votre vanish
     permission: multicommands.vanish
